css/carousel.css
.caro {
    background: #ccc;
    padding: 1em;
    box-shadow: inset 0 0 10px #999;
    -moz-box-shadow: inset 0 0 10px #999;
}

.caro a {
    color: #005c8b;
}

.caro .prev {
    float: left;
    background: url(../images/arrow_left.png) no-repeat 0 -31px; /* bxslider */
}

.caro .next {
    float: right;
    background: url(../images/arrow_right.png) no-repeat 0 -31px; /* bxslider */
}

.caro .button {
    width: 31px;
    height: 31px;
    cursor: pointer;
}

.caro .disabled {
    opacity: 0.5;
}

.caro .carouselNavi {
    text-align: center;
}

.caro .carouselNavi .button {
    margin-left: 1em;
}

.caro .carouselNavi .selected {
    font-weight: bold;
}

.caro p, .caro h3 {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

